# tictactoe

./: CMakeLists.txt  README.md  game.h  logica.c  main.c  minmax.c  render.c
